<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome_dialog_close"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="right|top"
            android:src="@mipmap/ic_close_icon"
            />

        <com.dsquare.hibour.utils.Proxima
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/black_1"
            android:textSize="@dimen/dp_25"
            />

        <com.dsquare.hibour.utils.Proxima
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/hibour"
            android:textColor="@color/black_1"
            android:textSize="@dimen/dp_25"/>

        <com.dsquare.hibour.utils.Proxima
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/we_hope_you"
            android:textColor="@color/gray"
            android:textSize="@dimen/dp_15"/>

        <com.dsquare.hibour.utils.Proxima
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_to_know"
            android:textColor="@color/gray"
            android:textSize="@dimen/dp_15"
            />

        <com.dsquare.hibour.utils.Proxima
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/your_nbours"
            android:textColor="@color/gray"
            android:textSize="@dimen/dp_15"
            />

        <Button
            android:id="@+id/welcome_dialog_hi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/brand"
            android:text="@string/say_hi"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_30"
            />

    </LinearLayout>

</RelativeLayout>
