<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dsquare.hibour.activities.GovtProof">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/extended_toolbar_height"
            android:id="@+id/govt_proof_toolbar"
            android:background="@color/brand">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/govt_proof_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/extended_tool_bar_text_size"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_large_height"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:id="@+id/govt_proof_button_bar">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black_button"
                android:text="@string/govt_prev_button_text"
                android:id="@+id/govt_prev_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/brand"
                android:text="@string/govt_next_button_text"
                android:id="@+id/govt_next_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/govt_proof_toolbar"
            android:layout_above="@id/govt_proof_button_bar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dp_65">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:background="@null"
                    android:textSize="@dimen/edit_text_size"
                    android:id="@+id/govt_cards_spinner"
                    android:prompt="@string/govt_card_name_text">
                </Spinner>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_bottom_line_height"
                    android:background="@color/gray"
                    android:layout_marginTop="-5dp"></View>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/govt_cardnumber_inputlayout"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_centerHorizontal="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        android:singleLine="true"
                        android:textCursorDrawable="@null"
                        android:editable="false"
                        android:textSize="@dimen/edit_text_size"
                        android:textColor="@color/gray"
                        android:backgroundTint="@color/gray"
                        android:id="@+id/govt_card_number_edittext"
                        android:inputType="textEmailAddress"
                        android:hint="@string/govt_card_number_text"/>
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_bottom_line_height"
                    android:background="@color/gray"
                    android:layout_marginTop="@dimen/dp_5"></View>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/gray"
                   android:textSize="@dimen/edit_text_size"
                   android:text="@string/govt_card_upload_text"
                   android:layout_marginTop="@dimen/dp_20"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_bottom_line_height"
                    android:background="@color/gray"
                    android:layout_marginTop="@dimen/edit_text_bottom_line_margin_top"></View>

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="@dimen/fab_govt_radius"
        android:layout_height="@dimen/fab_govt_radius"
        android:layout_marginLeft="@dimen/fab_govt_left_margin"
        android:layout_marginTop="@dimen/fab_govt_top_margin"
        android:src="@drawable/ic_text"
        app:backgroundTint="@android:color/white"
        android:scaleType="centerCrop">
    </android.support.design.widget.FloatingActionButton>

</FrameLayout>
