<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.dsquare.hibour.activities.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signup_scroll">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"
                android:background="@color/brand">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/logo"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/signup_icons_layout"
                android:layout_marginTop="@dimen/dp_20">
                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/dp_5"
                    android:id="@+id/signup_first_icon"
                    android:src="@drawable/avatar1"/>
                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_weight="1"
                    android:id="@+id/signup_second_icon"
                    android:layout_marginRight="@dimen/dp_5"
                    android:src="@drawable/avatar2"/>
                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1"
                    android:id="@+id/signup_third_icon"
                    android:src="@drawable/avatar3"/>
                <ImageView
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_weight="1"
                    android:id="@+id/signup_fourth_icon"
                    android:src="@drawable/avatar4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30">
                <com.dsquare.hibour.utils.Avenir
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_text1"
                    android:textColor="@color/black_2"
                    android:textSize="@dimen/sp_16"/>
                <com.dsquare.hibour.utils.Avenir
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_text2"
                    android:textColor="@color/brand"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textSize="@dimen/sp_16"/>
                <com.dsquare.hibour.utils.Avenir
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_text3"
                    android:textColor="@color/black_2"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_margin="@dimen/dp_40">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_name_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    app:hintTextAppearance="@style/ThemeTextInputLayout"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:textColorHint="@color/gray"
                        android:singleLine="true"
                        android:id="@+id/signup_name"
                        android:inputType="text"
                        android:hint="@string/signup_name_hint"/>
                    </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_bottom_line_height"
                    android:background="@color/gray"
                    android:layout_marginTop="@dimen/dp_5"></View>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_mail_inputlayout"
                    app:hintTextAppearance="@style/ThemeTextInputLayout"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_centerHorizontal="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        android:singleLine="true"
                        android:id="@+id/signup_email"
                        android:inputType="textEmailAddress"
                        android:hint="@string/signup_email_hint"/>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_bottom_line_height"
                    android:background="@color/gray"
                    android:layout_marginTop="@dimen/dp_5"></View>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_password_inputlayout"
                    android:layout_marginTop="@dimen/dp_20"
                    app:hintTextAppearance="@style/ThemeTextInputLayout"
                    android:layout_centerHorizontal="true">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        android:singleLine="true"
                        android:id="@+id/signup_password"
                        android:inputType="textPassword"
                        android:hint="@string/signup_password_hint"/>
                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_bottom_line_height"
                    android:background="@color/gray"
                    android:layout_marginTop="@dimen/dp_5"></View>

            </LinearLayout>
            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:text="@string/signup_button"
                android:elevation="@dimen/button_elevation"
                android:textAllCaps="false"
                android:background="@color/brand"
                android:textColor="@android:color/white"
                android:id="@+id/signup_signup_button"/>
            <com.dsquare.hibour.utils.Avenir
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_signin_text"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black_1"
                android:id="@+id/signup_signin_text"
                android:textSize="@dimen/text_Size_level5"/>
            <com.dsquare.hibour.utils.Avenir
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/signup_terms_text"
                android:textColor="@color/black_1"
                android:layout_gravity="center_horizontal"
                android:id="@+id/signup_terms"
                android:layout_marginBottom="@dimen/dp_20"/>
        </LinearLayout>

    </ScrollView>


</FrameLayout>
